# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  consts.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  scripts_calc.py  scripts_even.py  scripts_gcd.py  scripts_prime.py  scripts_progression.py
