[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games — это коллекция консольных игр, разработанных на Python. Каждая игра направлена на развитие логического мышления и памяти."
authors = ["Dana Senko <danaaasenko@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
ruff = "^0.6.9"


[tool.poetry.scripts]
brain-even = 'brain_games.games.brain_even:main'
brain-calc = 'brain_games.games.brain_calc:main'
brain-gcd = 'brain_games.games.brain_gcd:main'
brain-progression = 'brain_games.games.brain_progression:main'
brain-prime = 'brain_games.games.brain_prime:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
